--- a/crates/cow-abi/Cargo.toml
+++ b/crates/cow-abi/Cargo.toml
@@ -4,5 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-alloy-sol-types = { workspace = true }
-alloy-sol-macro  = { workspace = true, features = ["json"] }
+alloy = {workspace = true}
