--- a/crates/exex-node/Cargo.toml
+++ b/crates/exex-node/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 eyre = { workspace = true }
 tokio = { workspace = true }
+tokio-util = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 futures-util = { workspace = true }
