--- a/crates/exex-node/Cargo.toml
+++ b/crates/exex-node/Cargo.toml
@@ -10,6 +10,7 @@ tokio-util = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 futures-util = { workspace = true }
+clap = { workspace = true }
 
 reth = { workspace = true }
 reth-exex = { workspace = true }
